client/assets/styles/scss/components/header.scss
.header {
  border: 0;
  height: 60px;
  padding: 0 15px;

  .app & {
    position: fixed;
    top: 0;
    width: 100vw;
    z-index: 6000;
  }

  &.purple {
    background: $purple-light;
    border-bottom: 1px solid $purple;
  }

  // isolation
  &.gray {
    background: $gray;
    border-bottom: 1px solid $gray-dark;
  }

  // layout
  .logo,
  .btn-group,
  .btn-accounts {
    top: 12px;
  }

  // logo
  .logo {
    height: $input-sm; // center
    left: 15px;
    position: absolute;
  }

  // btn-group
  .btn-group {
    display: table;
    margin: 0 auto;
    overflow: hidden;

    > .btn {
      height: $input-line-height-sm;
      line-height: $input-line-height-sm;
      width: 135px;

      &.active {
        @extend %no-touching;
      }
    }

    .iconnables {
      float: left;
      height: 100%;
      margin-right: 6px;
      width: 18px;
    }
  }

  // accounts (custom .btn.purple)
  .btn-accounts {
    background: transparent;
    border-color: transparent;
    position: absolute;
    right: 15px;

    @include media(sm) {
      .span {
        display: none;
      }
    }

    &:hover,
    &:active,
    &.active {
      background: transparent;
      color: $white;
    }

    .gravatar {
      float: left;
      margin-right: 7px;
      margin-top: 4px;

      &.gravatar-isolation {
        margin-right: 12px;
      }

      // isolation gravatar
      + .gravatar {
        animation: scale-in .15s ease-in forwards;
        left: 27px;
      }

      @include retina() {
        border: 1px solid currentColor;
      }

      @include media(sm) {
        margin-right: 3px;
      }
    }
  }
}

